--- a/public/html/login.html
+++ b/public/html/login.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>로그인</h1>
-  <form method='post'>
+  <form method='post' action="/process/login/max">
     <div>아이디</div>
     <input type='text' name="id" />
     <div>비밀번호</div>
