multer로 이미지 파일 업로드 구현/수정

--- a/public/html/photo.html
+++ b/public/html/photo.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>마! 사진 업로드 해바라</h1>
-  <form method="post" action="/process/photo" encrypte="multipart/form-data">
+  <form method="post" action="/photo/upload" enctype="multipart/form-data">
     <div><label>파일 올려 바라</label></div>
     <div><input type="file" name="photo" /></div>
     <div><input type="submit" value="업로드" name="submit"></div>
